--- a/php8/dockerfile
+++ b/php8/dockerfile
@@ -1,4 +1,4 @@
-FROM php:8-fpm
+FROM php:8.5-rc-fpm-alpine3.22
 
 LABEL Author="PRATCHAYAPOL <pratchayapol.ja@rmuti.ac.th>" version="latest" org.opencontainers.image.authors="pratchayapol.ja@rmuti.ac.th"
 
