--- a/web8/dockerfile
+++ b/web8/dockerfile
@@ -1,4 +1,5 @@
-FROM nginx:latest
+
+FROM nginx:1.29.1
 
 LABEL Author="PRATCHAYAPOL <pratchayapol.ja@rmuti.ac.th>" version="latest" org.opencontainers.image.authors="pratchayapol.ja@rmuti.ac.th"
 
