--- a/web8/dockerfile
+++ b/web8/dockerfile
@@ -1,19 +1,12 @@
-
-FROM nginx:1.29.1
+FROM nginx:1.29.1-alpine3.22-slim
 
 LABEL Author="PRATCHAYAPOL <pratchayapol.ja@rmuti.ac.th>" version="latest" org.opencontainers.image.authors="pratchayapol.ja@rmuti.ac.th"
 
 # Install required dependencies for GD extension
-RUN apt-get update && apt-get install -y \
-    libjpeg-dev \
-    libpng-dev \
-    && rm -rf /var/lib/apt/lists/*
+RUN apk update && apk add --no-cache \
+    libjpeg-turbo-dev \
+    libpng-dev
 
-#COPY . .
-
-#COPY ../default.conf/default.conf /etc/nginx/conf.d/default.conf
-
-#COPY ../default.conf/nginx.conf /etc/nginx/nginx.conf
 
 COPY ../src /var/www/html
 
